--- a/tpl/default/settings.html
+++ b/tpl/default/settings.html
@@ -61,6 +61,13 @@
 				<input type="number" name="entries_per_page" id="entries_per_page" value="{$config->entries_per_page}"/>
 			</p>
 		</fieldset>
+		<fieldset>
+			<legend>Share</legend>
+			<p><label for="share_input_facebook">Facebook: </label><input type="checkbox" name="share_input_facebook" id="share_input_facebook"/></p>
+			<p><label for="share_input_twitter">Twitter: </label><input type="checkbox" name="share_input_twitter" id="share_input_twitter"/></p>
+			<p><label for="share_input_shaarli">Shaarli: </label><input type="text" name="share_input_shaarli" id="share_input_shaarli" placeholder="URL of your shaarli"/></p>
+			<p><label for="share_input_diaspora">Diaspora: </label><input type="text" name="share_input_diaspora" id="share_input_diaspora" placeholder="URL of your pod"/></p>
+		</fieldset>
 
 		<fieldset>
 			<legend>Misc</legend>
