--- a/tpl/default/_sidebar.html
+++ b/tpl/default/_sidebar.html
@@ -7,7 +7,7 @@
 
 	<ul class="Side-menu Menu">
 		<li class="Menu-li"><a href="index.php"><img src="img/home.svg" alt="Home"></a></li>
-		<li class="Menu-li"><a href="/tag/_sticky"><img src="img/stick.svg" alt="Sticky"></a></li>
+		<li class="Menu-li"><a href="/%tag%/_sticky"><img src="img/stick.svg" alt="Sticky"></a></li>
 	{if="!empty($user)"}
 	<li class="Menu-li"><a href="refresh.php?token={function="generate_token('refresh')"}"><img src="img/sync.svg" alt="Refresh"></a></li>
 		<li class="Menu-li"><a href="settings.php"><img src="img/settings.svg" alt="Settings"></a></li>
@@ -33,7 +33,7 @@
 	<ul class="Side-tagList TagList">
 			{loop="get_tags(USER_TAGS)"}
 				<li class="TagList-completeTag CompleteTag">
-					<a class="TagList-tagName TagName" href="/tag/{function="tag_encode($value['name'])"}">{$value['name']}</a>
+					<a class="TagList-tagName TagName" href="/%tag%/{function="tag_encode($value['name'])"}">{$value['name']}</a>
 				</li>
 			{/loop}
 	</ul>
@@ -41,7 +41,7 @@
 	<!--
 	<ul id="feedList">
 		{loop="$feeds"}
-			<li><a href="/feed/{$value['id']}">{$value['title']}</a></li>
+			<li><a href="/%feed%/{$value['id']}">{$value['title']}</a></li>
 		{/loop}
 	</ul>
 	-->
