Add some title attributes on links and value on input of type submit

--- a/tpl/default/login.html
+++ b/tpl/default/login.html
@@ -19,6 +19,6 @@
 		<input type="checkbox" name="remember" id="remember" class="Switch" />
 		<label for="remember">Remember me</label>
 	</div>
-	<input class="LoginForm-input Button" type="submit"/>
+	<input class="LoginForm-input Button" value="Login" type="submit"/>
 </form>
 {include="_end"}
