--- a/tpl/default/_sidebar.html
+++ b/tpl/default/_sidebar.html
@@ -2,16 +2,16 @@
 
 <aside class="Side">
 	<header class="Side-logo Logo">
-		<h1 class="Logo-h1"><a class="Logo-a" href="index.php"><img class="Logo-img" alt="Freeder" src="img/logo_complete.svg"></a></h1>
+		<h1 class="Logo-h1"><a class="Logo-a" href="index.php" title="Home"><img class="Logo-img" alt="Freeder" src="img/logo_complete.svg"></a></h1>
 	</header>
 
 	<ul class="Side-menu Menu">
-		<li class="Menu-li"><a href="index.php"><img src="img/home.svg" alt="Home"></a></li>
-		<li class="Menu-li"><a href="/%tag%/_sticky"><img src="img/stick.svg" alt="Sticky"></a></li>
+		<li class="Menu-li"><a href="index.php" title="Home"><img src="img/home.svg" alt="Home"></a></li>
+		<li class="Menu-li"><a href="/%tag%/_sticky" title="Sticky articles"><img src="img/stick.svg" alt="Sticky"></a></li>
 	{if="!empty($user)"}
-	<li class="Menu-li"><a href="refresh.php?token={function="generate_token('refresh')"}"><img src="img/sync.svg" alt="Refresh"></a></li>
-		<li class="Menu-li"><a href="settings.php"><img src="img/settings.svg" alt="Settings"></a></li>
-		<li class="Menu-li"><a href="logout.php"><img src="img/off.svg" alt="Logout"></a></li>
+	<li class="Menu-li"><a href="refresh.php?token={function="generate_token('refresh')"}" title="Refresh"><img src="img/sync.svg" alt="Refresh"></a></li>
+		<li class="Menu-li"><a href="settings.php" title="Settings"><img src="img/settings.svg" alt="Settings"></a></li>
+		<li class="Menu-li"><a href="logout.php" title="Logout"><img src="img/off.svg" alt="Logout"></a></li>
 	{else}
 		<li><a href="login.php">Login</a></li>
 	{/if}
