s/p/div in modal box

--- a/tpl/default/_end.html
+++ b/tpl/default/_end.html
@@ -16,7 +16,7 @@
 		{else}
 			<div id="JsModalbox" class="Modalbox error {$error['type']}">
 				<h1 id="JsModalbox-h1" class="Modalbox-h1">{$error['title']}</h1>
-				<p id="JsModalbox-p" class="Modalbox-content">{$error['content']}</p>
+				<div id="JsModalbox-p" class="Modalbox-content">{$error['content']}</div>
 			</div>
 		{/if}
 
