All div on modalbox

--- a/tpl/default/_end.html
+++ b/tpl/default/_end.html
@@ -11,7 +11,7 @@
 		{if="empty($error)"}
 			<div id="JsModalbox" class="Modalbox">
 				<h1 id="JsModalbox-h1" class="Modalbox-h1"></h1>
-				<p id="JsModalbox-p" class="Modalbox-content"></p>
+				<div id="JsModalbox-p" class="Modalbox-content"></div>
 			</div>
 		{else}
 			<div id="JsModalbox" class="Modalbox error {$error['type']}">
