modal box seems preety nice now :)

--- a/tpl/default/_author.html
+++ b/tpl/default/_author.html
@@ -1,5 +1,5 @@
 {if="!empty($value['authors'])"}
-	Edited by
+	, edited by
 	{loop="$value['authors']"}
 		{if="!empty($value1['uri'])"}
 			<a href="{$value1['uri']}">{$value1['name']}</a>
