--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -1,4 +1,5 @@
 {include="_begin"}
+
 	{loop="$entries"}
 		{$entry_feed=get_feed_from_entry($value, $feeds)}
 		<article class="Article">
@@ -40,8 +41,9 @@
 
 			<div class="ArticleContent">
 				<h1><a href="{function="get_entry_link($value)"}">{$value['title']}</a></h1>
-				<div class="Feed">From <a href="feed/{$entry_feed['id']}">{$entry_feed['title']}</a></div>
-				<div class="Authors">{include="_author"}</div>
+				<div class="FeedInfo">
+					From <a href="feed/{$entry_feed['id']}">{$entry_feed['title']}</a>{include="_author"}
+				</div>
 				<div>{$value['displayed_content']}</div>
 			</div>
 
@@ -52,23 +54,9 @@
 				{/loop}
 				</ul>
 			 </div>
-
-			<!--
-			**not usable yet**
-
-			{if="!empty($user) && $config->display_entries == 'content'"}
-				<nav class="Controls">
-					{if="!is_tag('read_', $value)"}
-						<button class="Controls-button Button red" onclick="read_entry(this, {$value['id']})">Read</button>
-					{else}
-						<button class="Controls-button Button red" onclick="unread_entry(this, {$value['id']})">Unread</button>
-					{/if}
-					<button class="Controls-button Button darkgrey" onclick="tag_entry(this, {$value['id']}, '_sticky')">Stick</button>
-					<button class="Controls-button Button green" onclick="">Share</button>
-				</nav>
-			{/if}
-			-->
 		</article>
 	{/loop}
+
 	<p>{$nb_pages} pages</p>
+
 {include="_end"}
