--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -40,7 +40,7 @@
 			</nav>
 
 			<div class="ArticleContent">
-				<h1><a href="{function="get_entry_link($value)"}">{$value['title']}</a></h1>
+				<h1><a href="{function="get_entry_link($value)"}#">{$value['title']}</a></h1>
 				<div class="FeedInfo">
 					From <a href="feed/{$entry_feed['id']}">{$entry_feed['title']}</a>{include="_author"}
 				</div>
