--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -31,7 +31,7 @@
 
 						{if="!empty($user)"}
 							<form class="Article-mainForm MainForm" action="#" onsubmit="return tag_form(this, {$value['id']}, '/%tag%/');">
-								<input class="MainForm-Input Input" type="text" name="newTag" id="newTag" placeholder="Tag…"/>
+								<input class="MainForm-Input Input grey" type="text" name="newTag" id="newTag" placeholder="Tag…"/>
 								<button class="MainForm-Submit Submit Button">Tag</button>
 							</form>
 						{/if}
