--- a/tpl/default/settings.html
+++ b/tpl/default/settings.html
@@ -17,7 +17,7 @@
 	<section class="SettingsSection">
 		<h2 class="TabContent-h2">Add a feed</h2>
 		<form method="post" action="#">
-			<p><input type="text" name="feed_url" id="feed_url" placeholder="Feed URL"/></p>
+			<p><input class="grey" type="text" name="feed_url" id="feed_url" placeholder="Feed URL"/></p>
 			<p>Import tags as well? <input type="radio" name="import_tags_add" value="1" id="import_tags_yes" {$config->import_tags_from_feeds != 0 ? 'checked="checked"' : ''}/><label for="import_tags_yes"> Yes</label> <input type="radio" name="import_tags_add" value="0" id="import_tags_no" {$config->import_tags_from_feeds == 0 ? 'checked="checked"' : ''}/><label for="import_tags_no"> No</label></p>
 			<p>
 				<label for="feed_post">POST data to send to have access to the feed (JSON formatted)</label><br/>
