--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -2,7 +2,7 @@
 
 	{loop="$entries"}
 		{$entry_feed=get_feed_from_entry($value, $feeds)}
-		<article class="Article">
+		<article class="Article" id="{$value['id']}">
 			<nav class="Controls">
 				{if="!empty($user)"}
 					{if="!is_tag('_read', $value)"}
