--- a/tpl/default/_include.html
+++ b/tpl/default/_include.html
@@ -1,3 +1,3 @@
 {* Usual header includes (e.g. stylesheet) *}
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/style.processed.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
