--- a/tpl/default/settings.html
+++ b/tpl/default/settings.html
@@ -62,6 +62,7 @@
 			<p><label for="share_input_facebook">Facebook: </label><input type="checkbox" name="share_input_facebook" id="share_input_facebook" {if="$config->facebook_share > 0"}checked="checked"{/if} value="1"/></p>
 			<p><label for="share_input_twitter">Twitter: </label><input type="checkbox" name="share_input_twitter" id="share_input_twitter" {if="$config->twitter_share > 0"}checked="checked"{/if} value="1"/></p>
 			<p><label for="share_input_shaarli">Shaarli: </label><input type="text" name="share_input_shaarli" id="share_input_shaarli" placeholder="URL of your shaarli" {if="!empty($config->shaarli_share)"}value="{$config->shaarli_share}"{/if}/></p>
+			<p><label for="share_input_shaarli">Wallabag: </label><input type="text" name="share_input_wallabag" id="share_input_wallabag" placeholder="URL of your Wallabag" {if="!empty($config->wallabag_share)"}value="{$config->wallabag_share}"{/if}/></p>
 			<p><label for="share_input_diaspora">Diaspora: </label><input type="text" name="share_input_diaspora" id="share_input_diaspora" placeholder="URL of your pod" {if="!empty($config->diaspora_share)"}value="{$config->diaspora_share}"{/if}/></p>
 		</fieldset>
 
