--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -57,6 +57,6 @@
 		</article>
 	{/loop}
 
-	<p>{$nb_pages} {if="$nb_pages > 1"}pages{/if}{else}page{/else}</p>
+	<p>{$nb_pages} page{$nb_pages > 1 ? 's' : ''}</p>
 
 {include="_end"}
