--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -50,7 +50,7 @@
 			<div class="Article-share Share">
 				<ul class="Share-services Services">
 				{loop="get_sharing_options()"}
-					<li><a href="{$value['url']}{function="get_entry_link($value1)"}">{$value['type']}</a></li>
+					<li><a href="{$value['url']}{function="get_entry_link($value1)"}#">{$value['type']}</a></li>
 				{/loop}
 				</ul>
 			 </div>
