fix settings links

--- a/tpl/default/settings.html
+++ b/tpl/default/settings.html
@@ -2,14 +2,14 @@
 
 <nav>
 	<ul class="Tabs">
-		<li class="OneTab current"><a class="OneTab-a" href="#feedManagement">Feeds</a></li>
-		<li class="OneTab"><a class="OneTab-a" href="#synchronization">Sync</a></li>
-		<li class="OneTab"><a class="OneTab-a" href="#template">Template</a></li>
-		<li class="OneTab"><a class="OneTab-a" href="#user">User</a></li>
-		<li class="OneTab"><a class="OneTab-a" href="#entries">Entries</a></li>
-		<li class="OneTab"><a class="OneTab-a" href="#sharing">Sharing</a></li>
-		<li class="OneTab"><a class="OneTab-a" href="#misc">Misc</a></li>
-		<li class="OneTab"><a class="OneTab-a" href="#importexport">Import Export</a></li>
+		<li class="OneTab current"><a class="OneTab-a" href="settings.php#feedManagement">Feeds</a></li>
+		<li class="OneTab"><a class="OneTab-a" href="settings.php#synchronization">Sync</a></li>
+		<li class="OneTab"><a class="OneTab-a" href="settings.php#template">Template</a></li>
+		<li class="OneTab"><a class="OneTab-a" href="settings.php#user">User</a></li>
+		<li class="OneTab"><a class="OneTab-a" href="settings.php#entries">Entries</a></li>
+		<li class="OneTab"><a class="OneTab-a" href="settings.php#sharing">Sharing</a></li>
+		<li class="OneTab"><a class="OneTab-a" href="settings.php#misc">Misc</a></li>
+		<li class="OneTab"><a class="OneTab-a" href="settings.php#importexport">Import Export</a></li>
 	</ul>
 </nav>
 
