Center modal boxes and fit them to every screen
See #40

--- a/tpl/default/_modal.html
+++ b/tpl/default/_modal.html
@@ -1,13 +1,21 @@
 {if="empty($error)"}
 	<div id="JsModalbox" class="Modalbox">
-		<h1 id="JsModalbox-h1" class="Modalbox-h1"></h1>
-		<div id="JsModalbox-p" class="Modalbox-content"></div>
+		<div class="Modalbox-wrapper1">
+		<div class="Modalbox-wrapper2">
+			<h1 id="JsModalbox-h1" class="Modalbox-h1"></h1>
+			<div id="JsModalbox-p" class="Modalbox-content"></div>
+		</div>
+		</div>
 	</div>
 {else}
 	<div id="JsModalbox" class="Modalbox {$error['type']}">
-		<h1 id="JsModalbox-h1" class="Modalbox-title">{$error['title']}</h1>
-		<div id="JsModalbox-p" class="Modalbox-content">{$error['content']}</div>
-		<button class="Button" onclick="ModalboxClose()">ok</button>
+		<div class="Modalbox-wrapper1">
+		<div class="Modalbox-wrapper2">
+			<h1 id="JsModalbox-h1" class="Modalbox-title">{$error['title']}</h1>
+			<div id="JsModalbox-p" class="Modalbox-content">{$error['content']}</div>
+			<button class="Button" onclick="ModalboxClose()">ok</button>
+		</div>
+		</div>
 	</div>
 {/if}
 
