Review entry info
 * Add commas and "and" between authors
 * Add date (relative of absolute)
 * Change style

--- a/tpl/default/_author.html
+++ b/tpl/default/_author.html
@@ -1,5 +1,6 @@
 {if="!empty($value['authors'])"}
-	, edited by
+	, by
+	{$remaining=count($value['authors'])}
 	{loop="$value['authors']"}
 		{if="!empty($value1['uri'])"}
 			<a href="{$value1['uri']}">{$value1['name']}</a>
@@ -10,5 +11,7 @@
 		{else}
 			Unknown
 		{/if}
+		{$remaining=$remaining-1}
+		{if="$remaining>1"}, {elseif="$remaining==1"} and {/if}
 	{/loop}
 {/if}
