--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -1,5 +1,22 @@
 {include="_begin"}
 
+	{if="empty($entries)"}
+	<article class="Article system">
+		{if="empty($feeds)"}
+		<h1>Welcome in Freeder!</h1>
+		<h4>It seems that you don't follow any feed!</h4>
+		<p>
+			You can add a feed through the <a href="/settings.php#feedManagement">Feeds settings</a> page.<br/>
+			You can also import your feed from another reader thanks to <a href="/settings.php#importexport">OPML import</a>.
+		</p>
+		{else}
+		<h1>Nothing new</h1>
+		<p>
+			You have no more unread entry!
+		</p>
+		{/if}
+	</article>
+	{/if}
 	{loop="$entries"}
 		{$entry_feed=get_feed_from_entry($value, $feeds)}
 		<article class="Article{if="is_tag('_read', $value)"} read{/if}" id="{$value['id']}">
