Restore feed list

--- a/tpl/default/_sidebar.html
+++ b/tpl/default/_sidebar.html
@@ -38,12 +38,12 @@
 			{/loop}
 	</ul>
 
-	<!--
-	<ul id="feedList">
+	<ul class="Side-feedList FeedList">
 		{loop="$feeds"}
-			<li><a href="/%feed%/{$value['id']}">{$value['title']}</a></li>
+			<li>
+				<a class="FeedList-feed" href="/%feed%/{$value['id']}">{$value['title']}</a>
+			</li>
 		{/loop}
 	</ul>
-	-->
 
 </aside>
