Add style to Share button

--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -57,6 +57,14 @@
 			</nav>
 
 			<div class="ArticleContent">
+				<div class="Article-share Share">
+					<ul class="Share-services Services">
+					{loop="get_sharing_options()"}
+						<li><a class="Share-link Button green" href="{$value['url']}{function="get_entry_link($value1)"}#">{$value['type']}</a></li>
+					{/loop}
+					</ul>
+				</div>
+
 				<h1><a href="{function="get_entry_link($value)"}#" {if="$config->open_items_new_tab != 0"}target="_blank"{/if}>{$value['title']}</a></h1>
 				<div class="FeedInfo">
 					In <a href="feed/{$entry_feed['id']}">{$entry_feed['title']}</a>{include="_author"}<br/>
@@ -65,13 +73,6 @@
 				<div>{$value['displayed_content']}</div>
 			</div>
 
-			<div class="Article-share Share">
-				<ul class="Share-services Services">
-				{loop="get_sharing_options()"}
-					<li><a href="{$value['url']}{function="get_entry_link($value1)"}#">{$value['type']}</a></li>
-				{/loop}
-				</ul>
-			 </div>
 		</article>
 	{/loop}
 
