--- a/tpl/default/_modal.html
+++ b/tpl/default/_modal.html
@@ -2,8 +2,8 @@
 	<div id="JsModalbox" class="Modalbox">
 		<div class="Modalbox-wrapper1">
 		<div class="Modalbox-wrapper2">
-			<h1 id="JsModalbox-h1" class="Modalbox-title">titre</h1>
-			<div id="JsModalbox-p" class="Modalbox-content">contenu</div>
+			<h1 id="JsModalbox-h1" class="Modalbox-title"></h1>
+			<div id="JsModalbox-p" class="Modalbox-content"></div>
 		</div>
 		</div>
 	</div>
