remove the click on dark to close the modalbox. To heavy with current code, it have to be improved. Waiting this ideal solution, I added a mandatory close button.

--- a/tpl/default/_modal.html
+++ b/tpl/default/_modal.html
@@ -2,8 +2,9 @@
 	<div id="JsModalbox" class="Modalbox">
 		<div class="Modalbox-wrapper1">
 		<div class="Modalbox-wrapper2">
-			<h1 id="JsModalbox-h1" class="Modalbox-title"></h1>
-			<div id="JsModalbox-p" class="Modalbox-content"></div>
+			<div id="JsModalbox-close" class="Modalbox-close">x</div>
+			<h1 id="JsModalbox-title" class="Modalbox-title"></h1>
+			<div id="JsModalbox-content" class="Modalbox-content"></div>
 		</div>
 		</div>
 	</div>
@@ -11,8 +12,9 @@
 	<div id="JsModalbox" class="Modalbox {$error['type']}">
 		<div class="Modalbox-wrapper1">
 		<div class="Modalbox-wrapper2">
-			<h1 id="JsModalbox-h1" class="Modalbox-title">{$error['title']}</h1>
-			<div id="JsModalbox-p" class="Modalbox-content">{$error['content']}</div>
+			<div id="JsModalbox-close" class="Modalbox-close">x</div>
+			<h1 id="JsModalbox-title" class="Modalbox-title">{$error['title']}</h1>
+			<div id="JsModalbox-content" class="Modalbox-content">{$error['content']}</div>
 			<button class="Button" onclick="ModalboxClose()">ok</button>
 		</div>
 		</div>
